infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-svc
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http: 
        paths: 
          - path: /posts/create
            backend: 
              serviceName: post-clusterip-svc
              servicePort: 4000
          - path: /posts
            backend: 
              serviceName: query-svc
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-svc
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
